--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,18 @@ body {
     background-color: #000000;
 }
 
+/* Hover dropdown */
+.nav-item.dropdown:hover .dropdown-menu {
+    display: block;
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.dropdown-menu {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
 
 @media (max-width: 480px) {
 .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl{
@@ -196,6 +208,13 @@ body {
     margin-bottom: 15px;
     border-radius: 4px;
     border: none;
+}
+.form-control:focus {
+    color: var(--bs-body-color);
+    background-color: var(--bs-form-control-bg);
+    border-color: #ffcc00 !important;
+    outline: 0;
+    box-shadow: 0 0 0 .25rem #ffcc0050 !important;
 }
 
 .form-check-label {
