--- a/styles.css
+++ b/styles.css
@@ -1693,8 +1693,9 @@ body {
 
 .feedback-left {
     flex: 1;
-    padding: 20px;
+    /* padding: 20px; */
     position: relative;
+    justify-items: center;
 }
 
 .feedback-hollow-text {
@@ -1732,8 +1733,10 @@ body {
     cursor: pointer;
     border-radius: 10px;
     overflow: hidden;
-    width: 100%;
-    margin-left: 22%;
+    border: 2px solid #ffcc00;
+    /* width: 100%; */
+    /* margin-left: 21%; */
+    
 }
 
 .play-button {
@@ -1748,7 +1751,7 @@ body {
     font-size: 2rem;
     color: #ffcc00;
     top: 50%;
-    left: 27%;
+    left: 37%;
     transform: translate(-50%, -50%);
 }
 
@@ -1761,8 +1764,8 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 9999;
     justify-content: center;
@@ -1804,6 +1807,11 @@ body {
     .vertical-carousel-controls {
         right: 10px;
     }
+
+    .video-thumbnail img {
+        width: 100%;
+        
+    }
 }
 
 @media (max-width: 480px) {
@@ -1822,6 +1830,10 @@ body {
     .feedback-hollow-text {
         font-size: 3rem;
         top: -20px;
+    }
+    .video-thumbnail {
+        width: 100%;
+        
     }
 }
 
